kodekloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: frontend-svc
          namespace: default
          port: 80
          kind: Service
    - matches:
      - path:
          type: PathPrefix
          value: /
